Added navigation bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 	</head>
 	
 	<body>
+		<div class="side-main-menu">
+			<a href="#">A</a>
+			<a href="#">B</a>
+			<a href="#">C</a>
+			<a href="#">D</a>
+		</div>
+	
+	
 		<h1>Lorem Ipsum</h1>
 		<div id="content">
 			Phasellus mi urna, posuere eget arcu eget, feugiat porttitor nunc. In mollis lobortis urna vel blandit. Duis convallis venenatis enim eget facilisis. Integer vitae molestie leo. Nulla in orci sed metus imperdiet rutrum eleifend vitae ante. Ut tempor semper justo, id vulputate dolor sagittis ac. Quisque viverra libero quam, ut tristique arcu rutrum eget.
