Added class to the div and moved title into content div

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 		</div>
 	
 	
-		<h1>Lorem Ipsum</h1>
-		<div id="content">
+		
+		<div id="content" class="main-content">
+			<h1>Lorem Ipsum</h1>
+		
 			Phasellus mi urna, posuere eget arcu eget, feugiat porttitor nunc. In mollis lobortis urna vel blandit. Duis convallis venenatis enim eget facilisis. Integer vitae molestie leo. Nulla in orci sed metus imperdiet rutrum eleifend vitae ante. Ut tempor semper justo, id vulputate dolor sagittis ac. Quisque viverra libero quam, ut tristique arcu rutrum eget.
 			Morbi facilisis arcu id arcu condimentum feugiat. Nam pellentesque efficitur congue. Cras vitae urna ut nunc congue imperdiet. Duis faucibus risus tortor, sodales varius lacus vehicula vestibulum. Proin nec venenatis sapien. Duis nec metus sollicitudin, consectetur neque et, finibus tellus. Nulla in mauris sit amet magna bibendum egestas in consequat lectus. Maecenas dapibus turpis vitae massa cursus lacinia. Nullam imperdiet in purus eget interdum. Maecenas vestibulum augue eget odio sodales, ac accumsan turpis posuere. Proin congue pellentesque gravida. Quisque eleifend et enim at maximus. Proin commodo urna sed mi aliquam cursus. Mauris vitae hendrerit nibh, ac sagittis est. Duis vel nisl non sem finibus dictum.
 			Praesent dolor nibh, interdum quis consectetur vitae, egestas et ante. Nulla interdum urna justo. Aliquam nisl ex, consequat eget porttitor quis, imperdiet non ante. Nulla et mauris eget neque pretium consequat. Morbi vulputate in est malesuada fringilla. Curabitur ac auctor magna. Nulla facilisi. Sed lobortis felis sed ultrices malesuada. Suspendisse tincidunt turpis turpis, nec malesuada ex dictum et. Fusce cursus nunc et sem rhoncus varius. Maecenas nec metus velit. Nulla tincidunt pellentesque maximus. Phasellus et luctus massa.
