Expanded styles for button and made it sticky

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 			<a href="#">D</a>
 		</div>
 	
-	
+		<div class="project-selector"> 
+			<button class="main-button">MyProject</button>
+		</div>
 		
 		<div id="content" class="main-content">
 			<h1>Lorem Ipsum</h1>
