Make project name longer for testing purposes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 	
 		<div class="project-selector"> 
-			<button class="main-button">MyProject</button>
+			<button class="main-button">This project has really long name</button>
 		</div>
 		
 		<div id="content" class="main-content">
