Added project menu (currently hidden)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 	
 		<div class="project-selector"> 
 			<button class="main-button">This project has really long name</button>
+			
+			<div class="selectable-projects">
+				<button>Project AAAAAA</button>
+				<button>Project B</button>
+			</div>
 		</div>
 		
 		<div id="content" class="main-content">
