Menu now shows when hovering over selected project button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="project-selector"> 
 			<button class="main-button">This project has really long name</button>
 			
-			<div class="selectable-projects">
+			<div id="project-list" class="selectable-projects">
 				<button>Project AAAAAA</button>
 				<button>Project B</button>
 			</div>
