--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 	
 	<body>
 		<div id="modal-window" class="modal">
-			<div class="modal-content">
+			<div class="modal-internal">
 				<button id="modal-close" class="modal-close">X</button>
 			
-				Some content here
+				<div id="modal-content">test</div>
 			</div>
 		</div>
 	
 	
 		<div class="side-main-menu">
-			<a href="javascript:alert(10)">Help</a>
+			<a href="javascript:openModalWith('./modals/help.html')">Help</a>
 			<a href="#">B</a>
 			<a href="#">C</a>
 			<a href="#">D</a>
@@ -59,16 +59,34 @@
 			];
 			
 		
+			
+		
+			
+		
 			var modal_window = document.getElementById("modal-window");
+			var modal_content = document.getElementById("modal-content");
 		
-		
+			// clears and closes modal window
 			document.getElementById("modal-close").onclick = function() {
+				modal_content.innerHTML = "";
 				modal_window.style.display = "none";
 			}
 			
 			
+			// fetches page and shows it in modal window
 			function openModalWith(url) {
-				
+				fetch(url)
+					.then(function(response) {
+						return response.text();
+					})
+					.then(function(respondText) {
+						modal_content.innerHTML = respondText;
+						
+						modal_window.style.display = "block";
+					})
+					.catch(function(expection) {
+						alert(expection);
+					})
 			}
 			
 		
