Added credits page

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 	
 		<div class="side-main-menu">
 			<a href="javascript:openModalWith('./modals/help.html')">Help</a>
-			<a href="#">B</a>
-			<a href="#">C</a>
-			<a href="#">D</a>
+			<a href="javascript:openModalWith('./modals/credits.html')">Credits</a>
 		</div>
 	
 		<div class="project-selector"> 
