--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
 		</div>
 	
 		<div class="project-selector"> 
-			<button id="selected-project-button" class="main-button">This project has really long name</button>
-			
-			<div id="project-list" class="selectable-projects">
-				<button>Project AAAAAA</button>
-				<button>Project B</button>
-			</div>
+			<button id="selected-project-button" class="main-button"></button>
+			<div id="project-list" class="selectable-projects"></div>
 		</div>
 		
 		
